--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.iunoob.bloodbank">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.android.donblood.bloodbank">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -9,6 +10,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permisson.READ_GSERVICES" />
+    <uses-feature android:name="android.hardware.telephony" android:required="false" />
+
 
     <application
         android:allowBackup="true"
@@ -22,28 +25,31 @@
             android:value="@string/google_maps_key" />
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity
-            android:name=".activities.LoginActivity"
+            android:name="com.android.donblood.bloodbank.activities.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".activities.Dashboard"
+            android:name="com.android.donblood.bloodbank.activities.Dashboard"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="RedundantLabel" />
         <activity
-            android:name=".activities.ProfileActivity"
+            android:name="com.android.donblood.bloodbank.activities.ProfileActivity"
             android:label="Registration" />
         <activity
-            android:name=".activities.RestorePassword"
+            android:name="com.android.donblood.bloodbank.activities.RestorePassword"
             android:label="Reset Password" />
         <activity
-            android:name=".activities.SplashActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name="com.android.donblood.bloodbank.activities.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PostActivity" />
+        <activity android:name="com.android.donblood.bloodbank.activities.PostActivity" />
     </application>
 
 </manifest>
