--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="RedundantLabel" />
         <activity
+            android:name="com.google.firebase.auth.internal.FederatedSignInActivity"
+            tools:replace="android:launchMode"
+            android:launchMode="standard" />
+        <activity
             android:name="com.android.donblood.bloodbank.activities.ProfileActivity"
             android:label="Registration" />
         <activity
@@ -42,6 +46,7 @@
             android:name="com.android.donblood.bloodbank.activities.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:exported="true">
+
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
